# x1brief

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: ai.rs  cli.rs  clipboard.rs  main.rs  notifier.rs  regex.rs  summarizer.rs  textprocess.rs  toml_setup.rs
