[package]
name = "X1Brief"
version = "0.2.0"
description = "Rust Based CLI that summarizes text using free AI model"
authors = ["Abdogouhmad"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-pipelines = "0.0.7"
candle-transformers = "0.10.2"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.23"
dirs = "6.0.0"
hf-hub = "0.5.0"
notify-rust = "4.17.0"
regex = "1.12.3"
serde = "1.0.228"
thiserror = "2.0.18"
tokenizers = "0.23.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
